[ACPI] Tell the BIOS Linux can handle Enhanced Speed Step (EST). (Venkatesh Pallipadi) http://bugzilla.kernel.org/show_bug.cgi?id=2712